Sensor: Enable the motion accelerometer for screen orientation change
The screen orientation can be detected by the motion accelerometer
instead of generic accelerometer to save power.

Change-Id: Iaeb3e5958d2ef7cc33080d7091ed8a5462695c67

Conflicts:
	core/res/res/values/config.xml
	core/res/res/values/symbols.xml

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1460,4 +1460,7 @@
          it is disabled by default so devices need to add an overlay to enable -->
     <string name="config_fastChargePath" translatable="false"></string>
 
+    <!-- bool value to for enabling motion accelerometer -->
+    <bool name="use_motion_accel">false</bool>
+
 </resources>
