--- a/core/res/res/values/fusion_symbols.xml
+++ b/core/res/res/values/fusion_symbols.xml
@@ -126,4 +126,9 @@
   <!-- fast charge -->
   <java-symbol type="string" name="config_fastChargePath" />
 
+  <!-- EdgeGesture service -->
+  <java-symbol type="dimen" name="edge_gesture_trigger_distance" />
+  <java-symbol type="dimen" name="edge_gesture_perpendicular_distance" />
+  <java-symbol type="dimen" name="edge_gesture_trigger_thickness" />
+
 </resources>
