--- a/packages/SystemUI/res/values/fusion_strings.xml
+++ b/packages/SystemUI/res/values/fusion_strings.xml
@@ -175,4 +175,7 @@
     <!-- Smart PullDown Warning -->
     <string name="smart_pulldown_disabled">Smart pulldown is disabled</string>
 
+    <!-- Active Display -->
+    <string name="active_display_privacy_content">Content message not showing because privacy mode enabled</string>
+
 </resources>
