Frameworks: Add Fast Charge QS Tile
This includes a file observer to watch the sysfs file change

Change-Id: I74167ec82c62772cb94ee70cc32fd01321d50d45

Patchset: 3
https://gerrit.slimroms.net/#/c/3179/

--- a/packages/SystemUI/res/values/fusion_strings.xml
+++ b/packages/SystemUI/res/values/fusion_strings.xml
@@ -137,6 +137,7 @@
     <string name="quick_settings_quick_record_play">Playing...</string>
     <string name="quick_settings_custom_toggle">Custom</string>
     <string name="quick_settings_contact_toggle">Contact</string>
+    <string name="quick_settings_fcharge">Fast charge</string>
 
     <!-- App sidebar -->
     <string name="default_folder_text">Folder</string>
