Added missed symbol fastcharge

--- a/core/res/res/values/fusion_symbols.xml
+++ b/core/res/res/values/fusion_symbols.xml
@@ -123,4 +123,7 @@
   <java-symbol type="color" name="holo_purple_dark" />
   <java-symbol type="color" name="holo_red_dark" />
 
+  <!-- fast charge -->
+  <java-symbol type="string" name="config_fastChargePath" />
+
 </resources>
