[1/2] Frameworks: Add in-the-spot user preference dialog
This is a new way to setup your device, more intuitively, without
diving into a sea of a hundred of menus
The basic idea is taken from TouchWiz roms (here: http://goo.gl/W40rF6)
Also create a helper class for implementing this easier all around the
ROM and implement it for first time on Quick Pull down

Drawables by Arz Bhatia

Author	D4rKn3sSyS <jesdga95@gmail.com> 	Jan 19, 2014 2:41 AM

Change-Id: I5645e6a377761bbfbf9fb9d4faec273eaca69ce8
Port: https://gerrit.paranoidandroid.co/#/c/3527/

--- a/packages/SystemUI/res/values/fusion_strings.xml
+++ b/packages/SystemUI/res/values/fusion_strings.xml
@@ -163,4 +163,8 @@
     <string name="pie_phone_status_airplane_mode">Airplane mode on</string>
     <string name="pie_phone_status_emergency_only">Emergency calls only</string>
 
+    <!-- Quick pulldown confirmation dialog -->
+    <string name="quick_settings_quick_pull_down_title">Quick pull down</string>
+    <string name="quick_settings_quick_pull_down_message">Would you like the edge of the status bar to pull down quick settings?</string>
+
 </resources>
