--- a/packages/SystemUI/res/drawable/ic_recents_clear.xml
+++ b/packages/SystemUI/res/drawable/ic_recents_clear.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2013 The MoKee OpenSource Project
+<!-- Copyright (C) 2013 The CyanogenMod Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,10 +13,8 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-
-    <!-- Title shown in recents popup for adding an application to the split view -->
-    <string name="status_bar_recent_add_to_split_view">Add to Split View</string>
-
-</resources>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true"
+        android:drawable="@drawable/ic_recents_clear_pressed" />
+    <item android:drawable="@drawable/ic_recents_clear_normal" />
+</selector>
