Fixup after AD commit

--- a/packages/SystemUI/res/values/fusion_attrs.xml
+++ b/packages/SystemUI/res/values/fusion_attrs.xml
@@ -7,6 +7,7 @@
 
     <declare-styleable name="BatteryBarController">
         <attr name="viewLocation" format="integer" />
+    </declare-styleable>
 
     <declare-styleable name="RoundedImageView">
         <attr name="corner_radius" format="dimension" />
