--- a/core/res/res/values/fusion_symbols.xml
+++ b/core/res/res/values/fusion_symbols.xml
@@ -71,6 +71,7 @@
 
   <!-- Hardware keys -->
   <java-symbol type="integer" name="config_deviceHardwareKeys" />
+  <java-symbol type="bool" name="config_singleStageCameraKey" />
 
   <!-- Telephony -->
   <java-symbol type="bool" name="config_samsung_stk" />
