--- a/core/res/res/values/fusion_strings.xml
+++ b/core/res/res/values/fusion_strings.xml
@@ -135,4 +135,7 @@
     <!-- In WiFi notification -->
     <string name="notify_turn_wifi_off_title">Turn Wi-Fi off</string>
 
+   <!-- label for item that takes On-The-Go in the phone options dialog -->
+   <string name="global_action_onthego">On-The-Go Mode</string>
+
 </resources>
