--- a/packages/SystemUI/res/values/fusion_strings.xml
+++ b/packages/SystemUI/res/values/fusion_strings.xml
@@ -238,4 +238,27 @@
     <string name="quick_settings_fcharge_on_label">Fast charge</string>
     <string name="quick_settings_fcharge_off_label">Disabled</string>
 
+    <!-- LET THERE BE HALO!! -->
+    <string name="halo_dismiss">Dismiss notification</string>
+    <string name="halo_hide">Hide</string>
+    <string name="halo_clear_all">Dismiss all notifications</string>
+    <string name="halo_silence">Hide &amp; silence until woken</string>
+    <string name="halo_tutorial1">This is HALO</string>
+    <string name="halo_tutorial2">Move me: 2x-tap &amp; drag</string>
+    <string name="halo_tutorial3">Browse tasks: Horizontal drag</string>
+    <string name="halo_battery_plugged">CHARGING</string>
+    <string name="halo_battery_unplugged">REMAINING</string>
+    <string name="halo_battery_full">FULL</string>
+    <string name="halo_aeroplane1">AEROPLANE</string>
+    <string name="halo_aeroplane2">MODE</string>
+    <string name="halo_wifi_on">WI-FI ON</string>
+    <string name="halo_wifi_off">WI-FI OFF</string>
+    <string name="halo_signal_bars_4">FULL</string>
+    <string name="halo_signal_bars_3">THREE BARS</string>
+    <string name="halo_signal_bars_2">TWO BARS</string>
+    <string name="halo_signal_bars_1">ONE BAR</string>
+    <string name="halo_signal_bars_none">NO BARS</string>
+    <string name="wifi_ap_disabled">WiFi AP disabled</string>
+    <string name="wifi_ap_enabled">WiFi AP enabled</string>
+
 </resources>
